# SPDX-License-Identifier: MIT
# Copyright 2025 Beslogic Inc.

[build-system]
# Using an upperbound pin to prevent sudden breakage.
# Since we're using a deprecated feature of setuptools, it could be removed in a major update.
requires = ["setuptools >=61,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "Beslogic-Ruff-Config"
version = "1.0.0"
license = { file = "LICENSE" }
description = "Ruff rules and configs used at Beslogic"
readme = "README.md"
dependencies = ["ruff >=0.13"] # Keep in sync with required-version in ruff.toml

[tool.setuptools.data-files]
"Beslogic-Ruff-Config" = ["ruff.toml"] # installs to <venv>/Beslogic-Ruff-Config/

[dependency-groups]
dev = ["dprint-py >=0.50.2.0"]
